# rust-web-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  release.sh
include/templates/: index.hbs
src/: lib.rs  main.rs  models.rs
src/controllers/: account.rs  mod.rs  task.rs  user.rs
src/dao/: account.rs  task.rs
src/framework/: database.rs  middleware.rs  mod.rs
src/models/: account.rs  mod.rs  task.rs  user.rs
src/repository/: account.rs  mod.rs  task.rs
src/schedule/: mod.rs
src/services/: account.rs  mod.rs  task.rs
src/sql/: init.sql
src/static/: app.cs
src/templates/: account-login.hbs  index.hbs  task-list.hbs  task-new.hbs
src/templates/task/: edit.hbs
src/utils/: crypto.rs  mic.rs  mod.rs  request.rs  response.rs
web-root/config/: web.conf
web-root/sql/: init.sql
web-root/templates/task/: edit.hbs  list.hbs  new.hbs
