[package]
name = "iron_web_demo"
version = "0.1.0"
description = " Rust web demo based on iron"
readme = "README.md"
repository = "https://github.com/hikelee/rust-web-demo"
license = "MIT"
authors = [
    "Hike Li <hikelee@gmail.com>"
]

[dependencies]
##rand="*"
term="*"
iron="*"
time="*"
postgres="*"
r2d2_postgres="*"
r2d2="*"
router="*"
mount = "*"
staticfile="*"
handlebars-iron="*"
rust-crypto = "^0.2"
rustc-serialize = "*"
persistent="*"
hyper="*"
urlencoded="*"
logger="*"
