[package]
name = "iron_web_demo"
version = "0.1.0"
description = " Rust web demo based on iron"
readme = "README.md"
repository = "https://github.com/hikelee/rust-web-demo"
license = "MIT"
authors = [
    "Hike Li <hikelee@gmail.com>"
]

[dependencies]
rand="0.3.14"
hyper="0.7.2"
chrono="0.2.20"
term="0.4.4"
iron="0.2.6"
time="0.1.34"
postgres = { version = "0.11.4", features = ["chrono"] }
r2d2_postgres="0.10.0"
r2d2="0.6.3"
router="0.1.0"
mount = "0.0.10"
staticfile="0.1.0"
handlebars-iron="0.12.0"
#rust-crypto = "^0.2"
rustc-serialize = "0.3.18"
persistent="0.0.9"
urlencoded="0.2.1"
logger="0.0.3"
cookie="0.2.2"
iron-login="0.2.0"
rust-crypto = "0.2.34"
