[package]
name = "iron_web_demo"
version = "0.1.0"
description = " Rust web demo based on iron"
readme = "README.md"
repository = "https://github.com/hikelee/rust-web-demo"
license = "MIT"
authors = [
    "Hike Li <hikelee@gmail.com>"
]

[dependencies]
rand="*"
hyper="*"
chrono="*"
term="*"
iron="*"
time="*"
postgres = { version = "*", features = ["chrono"] }
r2d2_postgres="*"
r2d2="*"
router="*"
mount = "*"
staticfile="*"
handlebars-iron="*"
rustc-serialize = "*"
persistent="*"
urlencoded="*"
logger="*"
cookie="*"
iron-login="*"
rust-crypto = "*"
regex="*"
lazy_static = "0.1.*"
